--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
   - export PPP_NLP_STANDALONE_CONFIG=$TRAVIS_BUILD_DIR/config.json
   - ./setup.py install
   - ./bootstrap.sh
+  - mv data/embeddings* /tmp/ppp_nlp_standalone_data/
 
 script:
   - coverage3 run run_tests.py
