--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
     - pip install scrutinizer-ocular coverage webtest httmock requests ppp_datamodel ppp_core nltk numpy
     - pip install -U scikit-learn
     - python -m nltk.downloader punkt
-    - sudo apt-get install build-essential python3-dev python3-setuptools python3-numpy python3-scipy libatlas-dev libatlas3gf-base
+    - sudo apt-get install libatlas-dev libatlas3gf-base
 
 
 
