--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
     - pip install -U scikit-learn
     - python -m nltk.downloader punkt
     - sudo apt-get install libatlas-dev libatlas3gf-base
-
+    - sudo update-alternatives --set libblas.so.3 /usr/lib/atlas-base/atlas/libblas.so.3
+    - sudo update-alternatives --set liblapack.so.3 /usr/lib/atlas-base/atlas/liblapack.so.3
 
 
 before_script:
