--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ python:
 install:
     - pip install scrutinizer-ocular coverage webtest httmock requests ppp_datamodel ppp_core nltk numpy
     - sudo apt-get install libatlas-dev libatlas3gf-base
-    - sudo update-alternatives --set libblas.so.3 /usr/lib/atlas-base/atlas/libblas.so.3gf
-    - sudo update-alternatives --set liblapack.so.3 /usr/lib/atlas-base/atlas/liblapack.so.3gf
+    - sudo update-alternatives --set libblas.so.3
+    - sudo update-alternatives --set liblapack.so.3
     - pip install -U scikit-learn
     - python -m nltk.downloader punkt
 
