--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - 3.4
 
 install:
-    - sudo apt-get install python3-numpy
+    - sudo apt-get install python3-numpy python3-scipy
     - pip install scrutinizer-ocular coverage webtest httmock requests ppp_datamodel ppp_core nltk
     - sudo apt-get install libatlas-dev libatlas3gf-base
     - pip install -U scikit-learn
