--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,8 @@ python:
   - 3.4
 
 install:
-    - sudo apt-get install python3-numpy
+    - sudo apt-get install python3-numpy libopenblas-dev libatlas-dev libatlas3gf-base
     - pip install scrutinizer-ocular coverage webtest httmock requests ppp_datamodel ppp_core nltk numpy
-    - sudo apt-get install libatlas-dev libatlas3gf-base
     - pip install scipy scikit-learn
     - python -m nltk.downloader punkt
 
